# mercurio-core

./: .gitignore  Cargo.toml  README.md
crates/mercurio-ai/: Cargo.toml
crates/mercurio-cli/: Cargo.toml
crates/mercurio-cli/src/: main.rs
crates/mercurio-core/: Cargo.toml
crates/mercurio-core/src/: ai.rs  assessment.rs  authoring.rs  behavior.rs  derived.rs  diagrams.rs  expression.rs  graph.rs  ir.rs  lib.rs  library.rs  logging.rs  metadata.rs  metamodel.rs  mutation.rs  paths.rs  plugin_registry.rs  project.rs  runtime.rs  semantic_compare.rs  source_set.rs  views.rs  workspace.rs
crates/mercurio-core/src/api/: mod.rs
crates/mercurio-core/src/frontend/: ast.rs  diagnostics.rs  format.rs  kerml.rs  lexer.rs  lint.rs  mod.rs  pilot.rs  resolver.rs  sysml.rs  transpile.rs
crates/mercurio-core/src/language/: kerml.rs  library_context.rs  modules.rs  sysml.rs
crates/mercurio-core/src/language/sysml/: mod.rs  parser.rs
crates/mercurio-core/tests/: kerml_examples_corpus.rs  language_loading.rs
crates/mercurio-kerml/: Cargo.toml
crates/mercurio-python/: Cargo.toml
crates/mercurio-python/src/: lib.rs
crates/mercurio-sysml/: Cargo.toml
docs/: ARCHITECTURE_MODEL.md  COMPILE_PERFORMANCE_BENCHMARK.md  DATALOG_REASONING_ENGINE_PLAN.md  DIAGRAM_IMPLEMENTATION_PLAN.md  KERML_SUPPORT_PLAN.md  KIR_SPEC.md  L2_PARSER_PLAN.md  PROJECT_DESCRIPTOR_AND_MOUNT_PLAN.md  PYTHON_FRONTEND_PLAN.md  README.md  SERVER_IMPLEMENTATION_PLAN.md  SERVER_WORKSPACE_PLAN.md  SYSML_EXPRESSION_IMPLEMENTATION_PLAN.md  VIEWS_ARCHITECTURE.md
resources/: stdlib.kir.json
(+20 files in other folders)
