[package]
name = "mercurio-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mercurio"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mercurio-core = { path = "../mercurio-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
