[package]
name = "mercurio-core"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
zip.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
